--- a/consciencia.html
+++ b/consciencia.html
@@ -39,6 +39,8 @@
       <p>A luta não é só resistência — é existência.✊🏿</p>
 
       <p>✊🏾 Nossa cor é nossa força, nossa história é nossa verdade.</p>
+      <p class="author">Texto: <a href="https://www.linkedin.com/posts/wesley-da-silva-rocha-a12201222_diadaconsciaeancianegra-orgulhopreto-resistaeancia-activity-7265040016047788033-JeAp?utm_source=share&utm_medium=member_desktop&rcm=ACoAADfqRG4Bj2p-pQcODi_kXlzcrm6KpgHeT6c" target="_blank">Wesley da Silva Rocha</a></p>
+      
     </article>
   </main>
 
@@ -49,3 +51,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
