--- a/tempo-cemiterio.html
+++ b/tempo-cemiterio.html
@@ -68,8 +68,9 @@
 
       <p><strong>Viva hoje, aproveite hoje!</strong></p>
 
-      <p class="author">Texto: <a href="https://www.instagram.com/p/C0He2AuxcKy/?igsh=MWR1dmMwZ3d6MnRnaA" target="_blank">@wesley_silva32</a></p>
+      <p class="author">Texto 26/09/2023: <a href="https://www.instagram.com/p/C0He2AuxcKy/?igsh=MWR1dmMwZ3d6MnRnaA" target="_blank">@wesley_silva32</a></p>
     </section>
   </main>
 </body>
 </html>
+
