--- a/ser-wesley.html
+++ b/ser-wesley.html
@@ -84,7 +84,7 @@
       Porque quem sente… já entendeu.</p>
 
       <p>Isso é muito Wesley! 🤎</p>
-      <p class="author">Texto: <a href="https://www.linkedin.com/posts/wesley-da-silva-rocha-a12201222_ser-wesley-activity-7349800959776075776-7o7o?utm_source=share&utm_medium=member_desktop&rcm=ACoAADfqRG4Bj2p-pQcODi_kXlzcrm6KpgHeT6c" target="_blank">Wesley da Silva Rocha</a></p>
+      <p class="author">Texto 12/07/2025: <a href="https://www.linkedin.com/posts/wesley-da-silva-rocha-a12201222_ser-wesley-activity-7349800959776075776-7o7o?utm_source=share&utm_medium=member_desktop&rcm=ACoAADfqRG4Bj2p-pQcODi_kXlzcrm6KpgHeT6c" target="_blank">Wesley da Silva Rocha</a></p>
 
     </article>
   </main>
@@ -96,5 +96,6 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
